line spacing fix.

--- a/src/Web/Sfa.Das.Sas.Web/Content/src/styles/screen.scss
+++ b/src/Web/Sfa.Das.Sas.Web/Content/src/styles/screen.scss
@@ -789,3 +789,11 @@ aside h2:first-child {
     }
 }
 /*end pagination*/
+
+#search-multiple-options {
+    .search-options {
+        h2.heading-small{
+            margin-bottom:20px;
+        }
+    }
+}
